[package]
name = "xor-cipher"
version = "4.0.0"
authors = ["nekitdev <nekit@nekit.dev>"]
edition = "2021"
description = "Simple, reusable and optimized XOR ciphers in Rust."
documentation = "https://docs.rs/xor-cipher"
readme = "README.md"
repository = "https://github.com/GDPSApp/xor-cipher"
license = "MIT"
keywords = ["xor", "cipher"]

[features]
std = []
