[package]
name = "xor-cipher"
version = "4.0.1"
authors = ["GDPS App <hello@gdps.app>"]
edition = "2024"
description = "Simple, reusable and optimized XOR ciphers in Rust."
documentation = "https://docs.rs/xor-cipher"
readme = "README.md"
repository = "https://github.com/GDPSApp/xor-cipher"
homepage = "https://gdps.app/"
license = "MIT"
keywords = ["xor", "cipher"]

[features]
default = ["std"]
std = []
